# ComfyUI-Folded-Prompts

./: .gitignore  README.md  __init__.py  pyproject.toml
js/: FPFoldedPrompts.js  FPTab.js  FPTabbedTextArea.js  FPTabbedTextArea.js.bak  FPTabbedTextArea.js.bak2  keybinding_extra.js
nodes/: ExecutionBlockerBreaker.py  FPFoldedPrompts.py  FPFoldedPrompts.py.bak  FPTab.py  FPTabbedTextArea.py  FPTabbedTextArea.py.bak  FPTabedTextPassthrough.py  FPTextAreaPlus.py  FPTextCleanAndSplitt.py  FPTextCleanAndSplitt.py.bak  TextCleanerSplitter.py
pf_data/: pf_-1.json
